MODSOURMAN-1308: Upgrade all dependencies for Sunflower fixing vulns (#979)